k8s/prod-manifests/customer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  ns-customer
  namespace: ns-customer
  labels:
    name: ns-customer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: ns-customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: caesarsage/customer:v3
        resources:
          requests:
              cpu: 250m
              memory: 350Mi
          limits:
            memory: "700Mi"
            cpu: "1100m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8001
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 8001


---
kind: Service
apiVersion: v1
metadata:
  name:  customer-service
  namespace: ns-customer
spec:
  selector:
    app:  customer
  # type:  LoadBalancer
  ports:
  - name:  customer
    port:  8001
    targetPort:  8001
    # nodePort: 30000
    protocol:  TCP
