k8s/prod-manifests/products.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-cloud-wariors
  namespace: ns-cloud-wariors
  labels:
    name: ns-cloud-wariors

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: ns-cloud-wariors
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: caesarsage/products:v3
          resources:
            requests:
              cpu: 250m
              memory: 350Mi
            limits:
              memory: "700Mi"
              cpu: "1100m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 10
          ports:
            - containerPort: 8001

---
kind: Service
apiVersion: v1
metadata:
  name: products-service
  namespace: ns-cloud-wariors
spec:
  selector:
    app: products
  # type:  LoadBalancer
  ports:
    - name: products
      port: 8001
      targetPort: 8001
      # nodePort: 30000
      protocol: TCP
