k8s/prod-manifests/shopping.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  ns-shopping
  namespace: ns-shopping
  labels:
    name: ns-shopping

---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
  namespace: ns-shopping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping
  template:
    metadata:
      labels:
        app: shopping
    spec:
      containers:
      - name: shopping
        image: kingtoff/shopping:v1
        resources:
          requests:
              cpu: 250m
              memory: 350Mi
          limits:
            memory: "700Mi"
            cpu: "1100m"
        readinessProbe:
          httpGet:
            path: /health
            port: 8003
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 8003


---
kind: Service
apiVersion: v1
metadata:
  name:  shopping-service
  namespace: ns-shopping
spec:
  selector:
    app:  shopping
  # type:  LoadBalancer
  ports:
  - name:  shopping
    port:  8003
    targetPort:  8003
    # nodePort: 30000
    protocol:  TCP
